Fixed arrow cursors' visibility in IE and FF.

--- a/WebContent/styles/designer.css
+++ b/WebContent/styles/designer.css
@@ -1102,6 +1102,7 @@ button {
 }
 
 button:hover {
+	color: #000;
 	background: #b2b2b2;
 }
 
